# painel-secom-vivi

./: README.md  datapackage.json  datapackage.yaml  pyproject.toml
data/: transformed_empenhos.csv
schemas/: transformed-nf_fornecedores.yaml  transformed_empenhos.yaml  transformed_nf_agencias.yaml  transformed_relatorio_de_investimentos.yaml
scripts/: generate_datapackage.py
